deploy/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cadena-staging
  labels:
    app.kubernetes.io/part-of: cadena
    environment: staging
