deploy/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cadena-api
  namespace: cadena-staging
spec:
  selector:
    app.kubernetes.io/name: cadena-api
  ports:
    - name: http
      port: 80
      targetPort: http
